# tpsimilarity

./: LICENSE  README.md  meson.build  project.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml  test.yml
examples/: example1.py  example2.py  example3.py  example4.py
notebooks/: example_notebook.ipynb
tests/: test_similarity.py
tpsimilarity/: __init__.py  similarity.py  version.py
